Proper CacheManager scoping #15