@@ -24,10 +24,10 @@ import io.bootique.annotation.BQConfigProperty;
 import io.bootique.resource.ResourceFactory;
 import io.bootique.shutdown.ShutdownManager;
 import jakarta.inject.Inject;
+import org.slf4j.Logger;
+import org.slf4j.LoggerFactory;
 
-import javax.cache.CacheException;
 import javax.cache.CacheManager;
-import javax.cache.Caching;
 import javax.cache.configuration.Configuration;
 import javax.cache.spi.CachingProvider;
 import java.net.URI;
@@ -36,13 +36,17 @@ import java.util.List;
 import java.util.Map;
 import java.util.Objects;
 import java.util.Optional;
+import java.util.ServiceLoader;
 
-@BQConfig("A collection of configuration files in the format understood by the provider.")
+@BQConfig("Configures JCache")
 public class JCacheFactory {
+
+    private static final Logger LOGGER = LoggerFactory.getLogger(JCacheFactory.class);
 
     private final ShutdownManager shutdownManager;
     private final Map<String, Configuration<?, ?>> cacheConfigurations;
 
+    private Class<?> provider;
     private List<ResourceFactory> configs;
 
     @Inject
@@ -51,23 +55,26 @@ public class JCacheFactory {
         this.cacheConfigurations = cacheConfigurations;
     }
 
-    @BQConfigProperty("A list of resource URLs pointing to cache configuration files in the format understood by the" +
-            " underlying JCache provider.")
+    @BQConfigProperty("""
+            A list of resource URLs pointing to cache configuration files in the format understood by the underlying \
+            JCache provider.""")
     public void setConfigs(List<ResourceFactory> configs) {
         this.configs = Objects.requireNonNull(configs);
     }
 
+    /**
+     * @since 4.0
+     */
+    @BQConfigProperty("""
+            A specific 'javax.cache.spi.CachingProvider' class that will handle caching. If not specified, the first \
+            available CachingProvider discovered via ServiceLoader is used""")
+    public void setProvider(Class<?> provider) {
+        this.provider = provider;
+    }
+
     public CacheManager create() {
 
-        CachingProvider provider;
-        try {
-            // TODO: an explicit config property to pick explicit provider out of available choices... though probably
-            // pointless in most cases (do we realistically expect multiple providers on classpath?)
-            provider = Caching.getCachingProvider();
-        } catch (CacheException e) {
-            throw new RuntimeException("'bootique-jcache' doesn't bundle any JCache providers. " +
-                    "You must place a JCache 1.0 provider on classpath explicitly.", e);
-        }
+        CachingProvider provider = findProvider();
         shutdownManager.onShutdown(provider);
 
         CacheManager manager = getConfigUri().map(u -> provider.getCacheManager(u, null)).orElse(provider.getCacheManager());
@@ -89,14 +96,47 @@ public class JCacheFactory {
             case 0 -> Optional.empty();
             case 1 -> {
                 try {
-                    yield Optional.of(configs.get(0).getUrl().toURI());
+                    yield Optional.of(configs.getFirst().getUrl().toURI());
                 } catch (URISyntaxException e) {
-                    throw new IllegalStateException("Error converting config to URI: " + configs.get(0));
+                    throw new IllegalStateException("Error converting config to URI: " + configs.getFirst());
                 }
             }
             // TODO: how do we merge multiple configs?
             default ->
                     throw new IllegalStateException("More than one JCache configuration specified. Currently unsupported: " + configs);
         };
+    }
+
+    private CachingProvider findProvider() {
+        return provider != null ? loadForType(provider) : loadFromServiceLoader();
+    }
+
+    private CachingProvider loadForType(Class<?> providerType) {
+
+        if (!CachingProvider.class.isAssignableFrom(providerType)) {
+            throw new RuntimeException("Type '" + providerType + "' is not a javax.cache.spi.CachingProvider");
+        }
+
+        try {
+            return (CachingProvider) providerType.getDeclaredConstructor().newInstance();
+        } catch (Exception e) {
+            throw new RuntimeException("CachingProvider type '" + providerType + "' is invalid or failed to load", e);
+        }
+    }
+
+    private CachingProvider loadFromServiceLoader() {
+        List<ServiceLoader.Provider<CachingProvider>> providers = ServiceLoader.load(CachingProvider.class).stream().toList();
+
+        if (providers.isEmpty()) {
+            throw new RuntimeException("No CachingProviders have been configured");
+        }
+
+        CachingProvider provider = providers.getFirst().get();
+
+        if (providers.size() > 1) {
+            LOGGER.warn("Found multiple CachingProviders. Using the first one: {}", provider.getClass().getName());
+        }
+
+        return provider;
     }
 }
